<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Welcome APK</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_name">Enter your name</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="action_search">Cloud</string>
    <string name="hai_user">Oh HAI</string>
    <string name="welcome_message">DIG DIP 2014</string>
    <string name="home_activity_name">Home</string>
    <string name="particles_activity_name">Particles</string>
    <string name="map_activity_name">Map</string>
    <string name="title_activity_particle">ParticleActivity</string>
    <string name="title_activity_map">MapActivity</string>
   
    <string name="lbl_currentlatlong">Current lat/long: </string>
    <string name="lbl_currentaltitude">Current altitude: </string>
    <string name="lbl_currentbearing">Current bearing: </string>
    <string name="lbl_currentaccuracy">Current accuracy: </string>
    <string name="lbl_currentelapsedtime">Elapsed time (nanoseconds) since read: </string>
    <string name="lbl_currentutctime">Current UTC time (milliseconds since January 1, 1970): </string>
    <string name="lbl_currentspeed">Current speed (meters/seconds): </string>
    <string name="lbl_currentdistancetomelbourne">Current distance to Melbourne, VIC, AU (meters): </string>
    <string name="lbl_distancebetweenmelbournesanfran">Distance between Melbourne, VIC, AU and San Francisco, CA, USA (meters): </string>
    
    <string name="text_waiting">Waiting...</string>
    

</resources>