<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <!-- http://developer.android.com/guide/topics/resources/menu-resource.html -->
    
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_cloud"
          android:title="@string/action_search"
          android:showAsAction="ifRoom" />
    
     <item android:id="@+id/menu_home_activity"
          android:title="@string/home_activity_name" 
          android:showAsAction="always"/>
     
      <item android:id="@+id/menu_particles_activity"
          android:title="@string/particles_activity_name" 
          android:showAsAction="always" />
      
      <item android:id="@+id/menu_map_activity"
          android:title="@string/map_activity_name" 
          android:showAsAction="always" />
      
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:showAsAction="never" />
   
</menu>